# BES-Predictive-Maintenance

./: README.md
esp/: Dockerfile  pyproject.toml
esp/esp/: predict.py
esp/notebooks/: Data_Processing.ipynb  model_prototyping.ipynb
esp/notebooks/.ipynb_checkpoints/: Data_Modelling-checkpoint.ipynb  Data_Wrangling-checkpoint.ipynb
